Update android sdk tool
Use image from https://github.com/thyrlian/AndroidSDKhttps://github.com/thyrlian/AndroidSDK